--- a/test/src/main/java/uks/debuggen/shop/events/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/shop/events/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	event 	serviceSubscribed 	productStored 	commandSent 	orderRegistered 	orderApproved 	orderPicked
+  classes: 	event 	serviceSubscribed 	productStored 	orderRegistered 	orderApproved 	orderPicked
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -13,7 +13,7 @@
   modified: 	false
   name: 	Event
   propertyStyle: 	Bean
-  subClasses: 	serviceSubscribed 	productStored 	commandSent 	orderRegistered 	orderApproved 	orderPicked
+  subClasses: 	serviceSubscribed 	productStored 	orderRegistered 	orderApproved 	orderPicked
 
 - serviceSubscribed: 	org.fulib.classmodel.Clazz
   attributes: 	serviceSubscribed_serviceUrl
@@ -24,23 +24,15 @@
   superClass: 	event
 
 - productStored: 	org.fulib.classmodel.Clazz
-  attributes: 	productStored_box 	productStored_product 	productStored_place
+  attributes: 	productStored_event 	productStored_box 	productStored_product 	productStored_place
   model: 	c
   modified: 	false
   name: 	ProductStored
   propertyStyle: 	Bean
   superClass: 	event
 
-- commandSent: 	org.fulib.classmodel.Clazz
-  attributes: 	commandSent_type 	commandSent_l1 	commandSent_product 	commandSent_customer 	commandSent_address 	commandSent_ok
-  model: 	c
-  modified: 	false
-  name: 	CommandSent
-  propertyStyle: 	Bean
-  superClass: 	event
-
 - orderRegistered: 	org.fulib.classmodel.Clazz
-  attributes: 	orderRegistered_product 	orderRegistered_customer 	orderRegistered_address
+  attributes: 	orderRegistered_event 	orderRegistered_trigger 	orderRegistered_product 	orderRegistered_customer 	orderRegistered_address
   model: 	c
   modified: 	false
   name: 	OrderRegistered
@@ -48,7 +40,7 @@
   superClass: 	event
 
 - orderApproved: 	org.fulib.classmodel.Clazz
-  attributes: 	orderApproved_order
+  attributes: 	orderApproved_event 	orderApproved_order
   model: 	c
   modified: 	false
   name: 	OrderApproved
@@ -56,7 +48,7 @@
   superClass: 	event
 
 - orderPicked: 	org.fulib.classmodel.Clazz
-  attributes: 	orderPicked_pickTask 	orderPicked_box 	orderPicked_user
+  attributes: 	orderPicked_event 	orderPicked_pickTask 	orderPicked_box 	orderPicked_user
   model: 	c
   modified: 	false
   name: 	OrderPicked
@@ -88,6 +80,15 @@
   type: 	String
   typeSignature: 	String
 
+- productStored_event: 	org.fulib.classmodel.Attribute
+  clazz: 	productStored
+  id: 	ProductStored_event
+  modified: 	false
+  name: 	event
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
 - productStored_box: 	org.fulib.classmodel.Attribute
   clazz: 	productStored
   id: 	ProductStored_box
@@ -115,56 +116,20 @@
   type: 	String
   typeSignature: 	String
 
-- commandSent_type: 	org.fulib.classmodel.Attribute
-  clazz: 	commandSent
-  id: 	CommandSent_type
+- orderRegistered_event: 	org.fulib.classmodel.Attribute
+  clazz: 	orderRegistered
+  id: 	OrderRegistered_event
   modified: 	false
-  name: 	type
+  name: 	event
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
 
-- commandSent_l1: 	org.fulib.classmodel.Attribute
-  clazz: 	commandSent
-  id: 	CommandSent_l1
+- orderRegistered_trigger: 	org.fulib.classmodel.Attribute
+  clazz: 	orderRegistered
+  id: 	OrderRegistered_trigger
   modified: 	false
-  name: 	l1
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- commandSent_product: 	org.fulib.classmodel.Attribute
-  clazz: 	commandSent
-  id: 	CommandSent_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- commandSent_customer: 	org.fulib.classmodel.Attribute
-  clazz: 	commandSent
-  id: 	CommandSent_customer
-  modified: 	false
-  name: 	customer
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- commandSent_address: 	org.fulib.classmodel.Attribute
-  clazz: 	commandSent
-  id: 	CommandSent_address
-  modified: 	false
-  name: 	address
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- commandSent_ok: 	org.fulib.classmodel.Attribute
-  clazz: 	commandSent
-  id: 	CommandSent_ok
-  modified: 	false
-  name: 	ok
+  name: 	trigger
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
@@ -196,11 +161,29 @@
   type: 	String
   typeSignature: 	String
 
+- orderApproved_event: 	org.fulib.classmodel.Attribute
+  clazz: 	orderApproved
+  id: 	OrderApproved_event
+  modified: 	false
+  name: 	event
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
 - orderApproved_order: 	org.fulib.classmodel.Attribute
   clazz: 	orderApproved
   id: 	OrderApproved_order
   modified: 	false
   name: 	order
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- orderPicked_event: 	org.fulib.classmodel.Attribute
+  clazz: 	orderPicked
+  id: 	OrderPicked_event
+  modified: 	false
+  name: 	event
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
