--- a/test/src/main/java/uks/fulibgen/shop/someservice/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/someservice/classModel.yaml
@@ -1,41 +1,34 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	storageModel 	storageService 	pickTask 	box
+  classes: 	someserviceModel 	someserviceService 	box
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
   mainJavaDir: 	"src/main/java"
-  packageName: 	uks.fulibgen.shop.Storage
-  packageSrcFolder: 	"src/main/java/uks/fulibgen/shop/Storage"
+  packageName: 	uks.fulibgen.shop.someservice
+  packageSrcFolder: 	"src/main/java/uks/fulibgen/shop/someservice"
 
-- storageModel: 	org.fulib.classmodel.Clazz
-  attributes: 	storageModel_modelMap
+- someserviceModel: 	org.fulib.classmodel.Clazz
+  attributes: 	someserviceModel_modelMap
   importList: 	"import java.util.LinkedHashMap;"
   imports: 	"import java.util.LinkedHashMap;"
-  methods: 	storageModel_getOrCreatePickTask 	storageModel_getOrCreateBox
+  methods: 	someserviceModel_getOrCreateBox
   model: 	c
   modified: 	false
-  name: 	StorageModel
+  name: 	someserviceModel
   propertyStyle: 	Bean
 
-- storageService: 	org.fulib.classmodel.Clazz
-  attributes: 	storageService_history 	storageService_port 	storageService_spark 	storageService_model 	storageService_handlerMap
+- someserviceService: 	org.fulib.classmodel.Clazz
+  attributes: 	someserviceService_history 	someserviceService_port 	someserviceService_spark 	someserviceService_model 	someserviceService_handlerMap
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.fulibgen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.fulibgen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
-  methods: 	storageService_start 	storageService_getHello 	storageService_subscribeAndLoadOldEvents 	storageService_apply 	storageService_handleOrderRegistered 	storageService_handleOrderPicked 	storageService_initEventHandlerMap 	storageService_ignoreEvent 	storageService_publish 	storageService_postApply
+  methods: 	someserviceService_start 	someserviceService_getHello 	someserviceService_subscribeAndLoadOldEvents 	someserviceService_apply 	someserviceService_handleProductStored 	someserviceService_initEventHandlerMap 	someserviceService_ignoreEvent 	someserviceService_publish 	someserviceService_postApply
   model: 	c
   modified: 	false
-  name: 	StorageService
-  propertyStyle: 	Bean
-
-- pickTask: 	org.fulib.classmodel.Clazz
-  attributes: 	pickTask_id 	pickTask_order 	pickTask_product 	pickTask_customer 	pickTask_address 	pickTask_state 	pickTask_box
-  model: 	c
-  modified: 	false
-  name: 	PickTask
+  name: 	someserviceService
   propertyStyle: 	Bean
 
 - box: 	org.fulib.classmodel.Clazz
-  attributes: 	box_id 	box_place
+  attributes: 	box_id 	box_product 	box_place
   model: 	c
   modified: 	false
   name: 	Box
@@ -48,9 +41,9 @@
   qualifiedImplName: 	java.util.ArrayList
   simpleImplName: 	ArrayList
 
-- storageModel_modelMap: 	org.fulib.classmodel.Attribute
-  clazz: 	storageModel
-  id: 	StorageModel_modelMap
+- someserviceModel_modelMap: 	org.fulib.classmodel.Attribute
+  clazz: 	someserviceModel
+  id: 	someserviceModel_modelMap
   initialization: 	"new LinkedHashMap<>()"
   modified: 	false
   name: 	modelMap
@@ -58,25 +51,11 @@
   type: 	"LinkedHashMap<String, Object>"
   typeSignature: 	"LinkedHashMap<String,Object>"
 
-- storageModel_getOrCreatePickTask: 	org.fulib.classmodel.FMethod
+- someserviceModel_getOrCreateBox: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageModel
-  declaration: 	"public PickTask getOrCreatePickTask(String id)"
-  id: 	StorageModel_getOrCreatePickTask
-  methodBody: 	"return (PickTask) modelMap.computeIfAbsent(id, k -> new PickTask().setId(k));
-"
-  modified: 	false
-  modifiers: 	public
-  name: 	getOrCreatePickTask
-  paramsString: 	"String id"
-  returnType: 	PickTask
-  signature: 	"class/StorageModel/method/getOrCreatePickTask(String)"
-
-- storageModel_getOrCreateBox: 	org.fulib.classmodel.FMethod
-  annotations: 	""
-  clazz: 	storageModel
+  clazz: 	someserviceModel
   declaration: 	"public Box getOrCreateBox(String id)"
-  id: 	StorageModel_getOrCreateBox
+  id: 	someserviceModel_getOrCreateBox
   methodBody: 	"return (Box) modelMap.computeIfAbsent(id, k -> new Box().setId(k));
 "
   modified: 	false
@@ -84,11 +63,11 @@
   name: 	getOrCreateBox
   paramsString: 	"String id"
   returnType: 	Box
-  signature: 	"class/StorageModel/method/getOrCreateBox(String)"
+  signature: 	"class/someserviceModel/method/getOrCreateBox(String)"
 
-- storageService_history: 	org.fulib.classmodel.Attribute
-  clazz: 	storageService
-  id: 	StorageService_history
+- someserviceService_history: 	org.fulib.classmodel.Attribute
+  clazz: 	someserviceService
+  id: 	someserviceService_history
   initialization: 	"new LinkedHashMap<>()"
   modified: 	false
   name: 	history
@@ -96,80 +75,80 @@
   type: 	"LinkedHashMap<String, Event>"
   typeSignature: 	"LinkedHashMap<String,Event>"
 
-- storageService_port: 	org.fulib.classmodel.Attribute
-  clazz: 	storageService
-  id: 	StorageService_port
-  initialization: 	42003
+- someserviceService_port: 	org.fulib.classmodel.Attribute
+  clazz: 	someserviceService
+  id: 	someserviceService_port
+  initialization: 	42002
   modified: 	false
   name: 	port
   propertyStyle: 	Bean
   type: 	int
   typeSignature: 	int
 
-- storageService_spark: 	org.fulib.classmodel.Attribute
-  clazz: 	storageService
-  id: 	StorageService_spark
+- someserviceService_spark: 	org.fulib.classmodel.Attribute
+  clazz: 	someserviceService
+  id: 	someserviceService_spark
   modified: 	false
   name: 	spark
   propertyStyle: 	Bean
   type: 	Service
   typeSignature: 	Service
 
-- storageService_model: 	org.fulib.classmodel.Attribute
-  clazz: 	storageService
-  id: 	StorageService_model
+- someserviceService_model: 	org.fulib.classmodel.Attribute
+  clazz: 	someserviceService
+  id: 	someserviceService_model
   modified: 	false
   name: 	model
   propertyStyle: 	Bean
-  type: 	StorageModel
-  typeSignature: 	StorageModel
+  type: 	someserviceModel
+  typeSignature: 	someserviceModel
 
-- storageService_handlerMap: 	org.fulib.classmodel.Attribute
-  clazz: 	storageService
-  id: 	StorageService_handlerMap
+- someserviceService_handlerMap: 	org.fulib.classmodel.Attribute
+  clazz: 	someserviceService
+  id: 	someserviceService_handlerMap
   modified: 	false
   name: 	handlerMap
   propertyStyle: 	Bean
   type: 	"LinkedHashMap<Class, Consumer<Event>>"
   typeSignature: 	"LinkedHashMap<Class,Consumer<Event>>"
 
-- storageService_start: 	org.fulib.classmodel.FMethod
+- someserviceService_start: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageService
+  clazz: 	someserviceService
   declaration: 	"public void start()"
-  id: 	StorageService_start
-  methodBody: 	"model = new StorageModel();
+  id: 	someserviceService_start
+  methodBody: 	"model = new someserviceModel();
 ExecutorService executor = Executors.newSingleThreadExecutor();
 spark = Service.ignite();
 spark.port(port);
 spark.get(\"/\", (req, res) -> executor.submit(() -> this.getHello(req, res)).get());
 spark.post(\"/apply\", (req, res) -> executor.submit(() -> this.postApply(req, res)).get());
 executor.submit(this::subscribeAndLoadOldEvents);
-Logger.getGlobal().info(\"Storage service is up and running on port \" + port);
+Logger.getGlobal().info(\"someservice service is up and running on port \" + port);
 "
   modified: 	false
   modifiers: 	public
   name: 	start
   paramsString: 	""
   returnType: 	void
-  signature: 	"class/StorageService/method/start()"
+  signature: 	"class/someserviceService/method/start()"
 
-- storageService_getHello: 	org.fulib.classmodel.FMethod
+- someserviceService_getHello: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageService
+  clazz: 	someserviceService
   declaration: 	"private String getHello(Request req, Response res)"
-  id: 	StorageService_getHello
+  id: 	someserviceService_getHello
   methodBody: 	"try {
    String events = Yaml.encode(getHistory().values().toArray());
    String objects = Yaml.encode(model.getModelMap().values().toArray());
-   return \"<p id='Storage'>This is the Storage service. </p>\n\" +
+   return \"<p id='someservice'>This is the someservice service. </p>\n\" +
          \"<pre>\" + events + \"</pre>\n\" +
          \"<pre>\" + objects + \"</pre>\n\" +
          \"\";
 }
 catch (Exception e) {
    Logger.getGlobal().log(Level.SEVERE, e.getMessage(), e);
-   return \"Storage Error \" + e.getMessage();
+   return \"someservice Error \" + e.getMessage();
 }
 "
   modified: 	false
@@ -177,15 +156,15 @@ catch (Exception e) {
   name: 	getHello
   paramsString: 	"Request req, Response res"
   returnType: 	String
-  signature: 	"class/StorageService/method/getHello(Request,Response)"
+  signature: 	"class/someserviceService/method/getHello(Request,Response)"
 
-- storageService_subscribeAndLoadOldEvents: 	org.fulib.classmodel.FMethod
+- someserviceService_subscribeAndLoadOldEvents: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageService
+  clazz: 	someserviceService
   declaration: 	"private void subscribeAndLoadOldEvents()"
-  id: 	StorageService_subscribeAndLoadOldEvents
+  id: 	someserviceService_subscribeAndLoadOldEvents
   methodBody: 	"ServiceSubscribed serviceSubscribed = new ServiceSubscribed()
-      .setServiceUrl(\"http://localhost:42003/apply\");
+      .setServiceUrl(\"http://localhost:42002/apply\");
 String json = Yaml.encode(serviceSubscribed);
 try {
    String url = \"http://localhost:42000/subscribe\";
@@ -209,13 +188,13 @@ catch (UnirestException e) {
   name: 	subscribeAndLoadOldEvents
   paramsString: 	""
   returnType: 	void
-  signature: 	"class/StorageService/method/subscribeAndLoadOldEvents()"
+  signature: 	"class/someserviceService/method/subscribeAndLoadOldEvents()"
 
-- storageService_apply: 	org.fulib.classmodel.FMethod
+- someserviceService_apply: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageService
+  clazz: 	someserviceService
   declaration: 	"public void apply(Event event)"
-  id: 	StorageService_apply
+  id: 	someserviceService_apply
   methodBody: 	"if (history.get(event.getId()) != null) {
    return;
 }
@@ -229,63 +208,36 @@ publish(event);"
   name: 	apply
   paramsString: 	"Event event"
   returnType: 	void
-  signature: 	"class/StorageService/method/apply(Event)"
+  signature: 	"class/someserviceService/method/apply(Event)"
 
-- storageService_handleOrderRegistered: 	org.fulib.classmodel.FMethod
+- someserviceService_handleProductStored: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageService
-  declaration: 	"private void handleOrderRegistered(Event e)"
-  id: 	StorageService_handleOrderRegistered
-  methodBody: 	"OrderRegistered event = (OrderRegistered) e;
-if (event.getId().equals(\"13:01\")) {
-
-   PickTask pick1300 = model.getOrCreatePickTask(\"pick1300\");
-   pick1300.setOrder(\"order1300\");
-   pick1300.setProduct(\"shoes\");
-   pick1300.setCustomer(\"Alice\");
-   pick1300.setAddress(\"Wonderland 1\");
-   pick1300.setState(\"todo\");
-}
-"
-  modified: 	false
-  modifiers: 	private
-  name: 	handleOrderRegistered
-  paramsString: 	"Event e"
-  returnType: 	void
-  signature: 	"class/StorageService/method/handleOrderRegistered(Event)"
-
-- storageService_handleOrderPicked: 	org.fulib.classmodel.FMethod
-  annotations: 	""
-  clazz: 	storageService
-  declaration: 	"private void handleOrderPicked(Event e)"
-  id: 	StorageService_handleOrderPicked
-  methodBody: 	"OrderPicked event = (OrderPicked) e;
-if (event.getId().equals(\"14:00\")) {
-
-   PickTask pick1300 = model.getOrCreatePickTask(\"pick1300\");
-   pick1300.setState(\"done\");
-   pick1300.setBox(\"box23\");
+  clazz: 	someserviceService
+  declaration: 	"private void handleProductStored(Event e)"
+  id: 	someserviceService_handleProductStored
+  methodBody: 	"ProductStored event = (ProductStored) e;
+if (event.getId().equals(\"12:00\")) {
 
    Box box23 = model.getOrCreateBox(\"box23\");
-   box23.setPlace(\"shipping\");
+   box23.setProduct(\"shoes\");
+   box23.setPlace(\"shelf23\");
 }
 "
   modified: 	false
   modifiers: 	private
-  name: 	handleOrderPicked
+  name: 	handleProductStored
   paramsString: 	"Event e"
   returnType: 	void
-  signature: 	"class/StorageService/method/handleOrderPicked(Event)"
+  signature: 	"class/someserviceService/method/handleProductStored(Event)"
 
-- storageService_initEventHandlerMap: 	org.fulib.classmodel.FMethod
+- someserviceService_initEventHandlerMap: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageService
+  clazz: 	someserviceService
   declaration: 	"private void initEventHandlerMap()"
-  id: 	StorageService_initEventHandlerMap
+  id: 	someserviceService_initEventHandlerMap
   methodBody: 	"if (handlerMap == null) {
    handlerMap = new LinkedHashMap<>();
-   handlerMap.put(OrderRegistered.class, this::handleOrderRegistered);
-   handlerMap.put(OrderPicked.class, this::handleOrderPicked);
+   handlerMap.put(ProductStored.class, this::handleProductStored);
 }
 "
   modified: 	false
@@ -293,13 +245,13 @@ if (event.getId().equals(\"14:00\")) {
   name: 	initEventHandlerMap
   paramsString: 	""
   returnType: 	void
-  signature: 	"class/StorageService/method/initEventHandlerMap()"
+  signature: 	"class/someserviceService/method/initEventHandlerMap()"
 
-- storageService_ignoreEvent: 	org.fulib.classmodel.FMethod
+- someserviceService_ignoreEvent: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageService
+  clazz: 	someserviceService
   declaration: 	"private void ignoreEvent(Event event)"
-  id: 	StorageService_ignoreEvent
+  id: 	someserviceService_ignoreEvent
   methodBody: 	"// empty
 "
   modified: 	false
@@ -307,13 +259,13 @@ if (event.getId().equals(\"14:00\")) {
   name: 	ignoreEvent
   paramsString: 	"Event event"
   returnType: 	void
-  signature: 	"class/StorageService/method/ignoreEvent(Event)"
+  signature: 	"class/someserviceService/method/ignoreEvent(Event)"
 
-- storageService_publish: 	org.fulib.classmodel.FMethod
+- someserviceService_publish: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageService
+  clazz: 	someserviceService
   declaration: 	"public void publish(Event event)"
-  id: 	StorageService_publish
+  id: 	someserviceService_publish
   methodBody: 	"String json = Yaml.encode(event);
 
 try {
@@ -331,13 +283,13 @@ catch (UnirestException e) {
   name: 	publish
   paramsString: 	"Event event"
   returnType: 	void
-  signature: 	"class/StorageService/method/publish(Event)"
+  signature: 	"class/someserviceService/method/publish(Event)"
 
-- storageService_postApply: 	org.fulib.classmodel.FMethod
+- someserviceService_postApply: 	org.fulib.classmodel.FMethod
   annotations: 	""
-  clazz: 	storageService
+  clazz: 	someserviceService
   declaration: 	"private String postApply(Request req, Response res)"
-  id: 	StorageService_postApply
+  id: 	someserviceService_postApply
   methodBody: 	"      try {
          String body = req.body();
          Map<String, Object> map = Yaml.decode(body);
@@ -355,76 +307,22 @@ catch (UnirestException e) {
   name: 	postApply
   paramsString: 	"Request req, Response res"
   returnType: 	String
-  signature: 	"class/StorageService/method/postApply(Request,Response)"
-
-- pickTask_id: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTask
-  id: 	PickTask_id
-  modified: 	false
-  name: 	id
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTask_order: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTask
-  id: 	PickTask_order
-  modified: 	false
-  name: 	order
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTask_product: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTask
-  id: 	PickTask_product
-  modified: 	false
-  name: 	product
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTask_customer: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTask
-  id: 	PickTask_customer
-  modified: 	false
-  name: 	customer
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTask_address: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTask
-  id: 	PickTask_address
-  modified: 	false
-  name: 	address
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTask_state: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTask
-  id: 	PickTask_state
-  modified: 	false
-  name: 	state
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
-
-- pickTask_box: 	org.fulib.classmodel.Attribute
-  clazz: 	pickTask
-  id: 	PickTask_box
-  modified: 	false
-  name: 	box
-  propertyStyle: 	Bean
-  type: 	String
-  typeSignature: 	String
+  signature: 	"class/someserviceService/method/postApply(Request,Response)"
 
 - box_id: 	org.fulib.classmodel.Attribute
   clazz: 	box
   id: 	Box_id
   modified: 	false
   name: 	id
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- box_product: 	org.fulib.classmodel.Attribute
+  clazz: 	box
+  id: 	Box_product
+  modified: 	false
+  name: 	product
   propertyStyle: 	Bean
   type: 	String
   typeSignature: 	String
