Adding selenide test steps removing some debug output

--- a/test/src/main/java/uks/fulibgen/shop/Shop/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Shop/classModel.yaml
@@ -189,13 +189,11 @@ catch (Exception e) {
 String json = Yaml.encode(serviceSubscribed);
 try {
    String url = \"http://localhost:42000/subscribe\";
-   Logger.getGlobal().info(\"Connecting to \" + url);
    HttpResponse<String> response = Unirest
          .post(url)
          .body(json)
          .asString();
    String body = response.getBody();
-   Logger.getGlobal().info(\"       .... got \n\" + body);
    Map<String, Object> objectMap = Yaml.decode(body);
    for (Object obj : objectMap.values()) {
       apply((Event) obj);
@@ -237,6 +235,17 @@ publish(event);"
   declaration: 	"private void handleOrderRegistered(Event e)"
   id: 	ShopService_handleOrderRegistered
   methodBody: 	"OrderRegistered event = (OrderRegistered) e;
+if (event.getId().equals(\"13:01\")) {
+
+   Order order1300 = model.getOrCreateOrder(\"order1300\");
+   order1300.setProduct(\"shoes\");
+   order1300.setCustomer(\"Alice\");
+   order1300.setAddress(\"Wonderland 1\");
+   order1300.setState(\"pending\");
+
+   Customer alice = model.getOrCreateCustomer(\"Alice\");
+   alice.setOrders(\"[order1300]\");
+}
 if (event.getId().equals(\"13:11\")) {
 
    Order order1310 = model.getOrCreateOrder(\"order1310\");
@@ -323,7 +332,6 @@ if (event.getId().equals(\"13:14\")) {
    handlerMap.put(OrderRegistered.class, this::handleOrderRegistered);
    handlerMap.put(OrderApproved.class, this::handleOrderApproved);
    handlerMap.put(OrderPicked.class, this::handleOrderPicked);
-   handlerMap.put(OrderRegistered.class, this::handleOrderRegistered);
    handlerMap.put(OrderDeclined.class, this::handleOrderDeclined);
 }
 "
@@ -360,7 +368,6 @@ try {
          .post(\"http://localhost:42000/publish\")
          .body(json)
          .asString();
-   System.out.println(response.getBody());
 }
 catch (UnirestException e) {
    e.printStackTrace();
