--- a/test/build.gradle
+++ b/test/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/junit/junit
 	testImplementation group: 'junit', name: 'junit', version: '4.13'
 	testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
+	testImplementation 'com.codeborne:selenide:5.21.0'
 
 	testImplementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
 	genImplementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
