--- a/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
@@ -189,13 +189,11 @@ catch (Exception e) {
 String json = Yaml.encode(serviceSubscribed);
 try {
    String url = \"http://localhost:42000/subscribe\";
-   Logger.getGlobal().info(\"Connecting to \" + url);
    HttpResponse<String> response = Unirest
          .post(url)
          .body(json)
          .asString();
    String body = response.getBody();
-   Logger.getGlobal().info(\"       .... got \n\" + body);
    Map<String, Object> objectMap = Yaml.decode(body);
    for (Object obj : objectMap.values()) {
       apply((Event) obj);
@@ -257,6 +255,20 @@ if (event.getId().equals(\"12:00\")) {
   declaration: 	"private void handleOrderRegistered(Event e)"
   id: 	StorageService_handleOrderRegistered
   methodBody: 	"OrderRegistered event = (OrderRegistered) e;
+if (event.getId().equals(\"13:01\")) {
+
+   PickTask pick1300 = model.getOrCreatePickTask(\"pick1300\");
+   pick1300.setOrder(\"order1300\");
+   pick1300.setProduct(\"shoes\");
+   pick1300.setCustomer(\"Alice\");
+   pick1300.setAddress(\"Wonderland 1\");
+   pick1300.setState(\"todo\");
+
+   OrderApproved e1305 = new OrderApproved();
+   e1305.setEvent(\"order approved 13:05\");
+   e1305.setOrder(\"order1300\");
+   publish(e1305);
+}
 if (event.getId().equals(\"13:11\")) {
 
    OrderDeclined e1314 = new OrderDeclined();
@@ -305,7 +317,6 @@ if (event.getId().equals(\"14:00\")) {
    handlerMap.put(ProductStored.class, this::handleProductStored);
    handlerMap.put(OrderRegistered.class, this::handleOrderRegistered);
    handlerMap.put(OrderPicked.class, this::handleOrderPicked);
-   handlerMap.put(OrderRegistered.class, this::handleOrderRegistered);
 }
 "
   modified: 	false
@@ -341,7 +352,6 @@ try {
          .post(\"http://localhost:42000/publish\")
          .body(json)
          .asString();
-   System.out.println(response.getBody());
 }
 catch (UnirestException e) {
    e.printStackTrace();
